Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - 'naming.IBasicContext.lookup()' and 'naming.lookup()' now accept a 'default'
   argument, similar to that used by 'lookupComponent()' and most other
   lookup-like APIs in PEAK.  This change was made so that component lookups
   don't need to rely on catching 'exceptions.NameNotFound' errors to tell them
   when to use the default value.  This could hide 'NameNotFound' errors that
   were actually from a broken component somewhere in the lookup process.  (In
   general, it's probably a bad idea to have an exception that's used for both
   control flow and real errors!)

 - Added new 'version' tool that automatically edits files to update version
   information in them.  Just execute the 'version' file in the main PEAK
   source directory.  (Use '--help' for help.)  You can use this tool with your
   own projects by creating 'version' and 'version.dat' files in your project
   directory, similar to the ones used by PEAK.  The 'version' file is a ZConfig
   file that describes your project's version numbering scheme(s), formats,
   and the files that need to be edited, while the 'version.dat' file contains
   the current version number values.  Source for the tool, including the
   configuration file schema, is in the 'peak.running.tools.version' package.
   (Error handling and documentation, alas, are still minimal.)

 - Added new 'Alias' command in 'peak.running.commands'.  An 'Alias' instance
   can be used as a 'peak.running.shortcut' property that expands to another
   command with arbitrary arguments inserted before the original command's
   arguments.  Thus, one might alias 'mycommand' to 'runIni somefile --option',
   similar to command aliases in many shells.

 - 'naming.IName' is now derived from 'binding.IComponentKey', so names and
   addresses must now support the 'findComponent()' method.  All PEAK name and
   address types provide support for this.
